# AILamp

./: .gitignore  NOTICE.md  README.md  pyproject.toml
3D/AILamp_Adapters/: AILamp_Base_Arm_Link_Boot.3mf  AILamp_Base_Arm_Link_Boot.stl  AILamp_Cable_Clip_10mm.3mf  AILamp_Cable_Clip_10mm.stl  AILamp_Cable_Clip_6mm.3mf  AILamp_Cable_Clip_6mm.stl  AILamp_Electronics_Side_Deck.3mf  AILamp_Electronics_Side_Deck.stl  AILamp_Head_Camera_Mount.3mf  AILamp_Head_Camera_Mount.stl  AILamp_Jetson_Nano_Base_Tray.3mf  AILamp_Jetson_Nano_Base_Tray.stl  AILamp_LampBase_Electronics_Cover.3mf  AILamp_LampBase_Electronics_Cover.stl  AILamp_LampBase_Electronics_Shell.3mf  (+5 more)
config/: hardware.jetson-nano.toml  hardware.toml
docs/: github-actions-ci.yml
docs/zh/: 0-前期准备.md  (+7 more)
scripts/: export_ailamp_assembly.py  generate_ailamp_adapters.py  generate_ailamp_robot_mjcf.py  inject_motion_keyframes.py  open_ailamp_mujoco.py  render_ailamp_base_preview.py  render_ailamp_mujoco.py  render_io_window.py  render_motion_gallery.py  render_shell_close.py  sync_simulation_adapter_meshes.py  verify_local.sh
simulation/: ailamp_robot.xml  ailamp_scene.xml
tests/: test_ailamp_adapters.py  test_api_vision.py  test_assets.py  test_behavior.py  test_behavior_config.py  test_birthday.py  test_camera.py  test_cli.py  test_config.py  test_decision.py  test_decision_service.py  test_docs.py  test_led_serial.py  test_motor_backend.py  test_motor_service.py  test_paths.py  test_simulation_runner.py  test_vision_events.py  test_vision_runtime.py  test_vision_runtime_fusion.py  test_vision_runtime_resilience.py
(+46 files in other folders)
